--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.825.0",
+    "@nestjs-packages/sqs": "^1.0.2",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^11.0.0",
-    "aws-sdk": "^2.1692.0",
+    "@types/aws-sdk": "^0.0.42",
     "pg": "^8.16.0",
     "redis": "^4.7.1",
     "reflect-metadata": "^0.2.0",
