--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:offline": "export NODE_OPTIONS='--no-experimental-require-module' && npx sls offline start",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -28,6 +29,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "@types/aws-sdk": "^0.0.42",
+    "aws-lambda": "^1.0.7",
+    "aws-serverless-express": "^3.4.0",
     "pg": "^8.16.0",
     "redis": "^4.7.1",
     "reflect-metadata": "^0.2.0",
@@ -49,10 +52,8 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "serverless": "^3.38.0",
-    "serverless-dotenv-plugin": "^6.0.0",
-    "serverless-offline": "^12.0.4",
-    "serverless-offline-sqs": "^8.0.0",
+    "serverless": "^4.17.0",
+    "serverless-offline": "^14.4.0",
     "serverless-plugin-typescript": "^2.1.5",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
@@ -78,5 +79,13 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "overrides": {
+    "serverless-offline": {
+      "serverless": "$serverless"
+    },
+    "serverless-plugin-typescript": {
+      "serverless": "$serverless"
+    }
   }
 }
