--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-sns": "^3.826.0",
     "@aws-sdk/client-sqs": "^3.825.0",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
