--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "@types/aws-sdk": "^0.0.42",
+    "@types/ioredis": "^4.28.10",
+    "@types/pg": "^8.15.4",
     "aws-lambda": "^1.0.7",
     "aws-serverless-express": "^3.4.0",
+    "ioredis": "^5.6.1",
     "pg": "^8.16.0",
     "redis": "^4.7.1",
     "reflect-metadata": "^0.2.0",
