--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:run": "npm run typeorm migration:run -- -d src/database/data-source.ts"
   },
   "dependencies": {
     "@aws-sdk/client-sns": "^3.826.0",
@@ -34,6 +36,7 @@
     "@types/pg": "^8.15.4",
     "aws-lambda": "^1.0.7",
     "aws-serverless-express": "^3.4.0",
+    "dotenv": "^16.5.0",
     "ioredis": "^5.6.1",
     "pg": "^8.16.0",
     "redis": "^4.7.1",
