detach app from core and add path decorators

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,11 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "module": "commonjs",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "paths": {
+      "@core/*": ["./src/core/*"],
+      "@app/*": ["./src/app/*"],
+      "@database/*": ["./src/database/*"],
+    }
   }
 }
