--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@aws-sdk/client-sns": "^3.826.0",
     "@aws-sdk/client-sqs": "^3.825.0",
+    "@aws-sdk/client-ssm": "^3.826.0",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
