--- a/serverless.yml
+++ b/serverless.yml
@@ -15,6 +15,8 @@ provider:
       Fn::GetAtt: [TransactionQueue, QueueUrl]
     SNS_TOPIC_ARN:
       Ref: SuccessNotificationTopic
+    EMAIL_TOPIC_ARN:
+      Ref: EmailNotificationTopic
     DB_HOST:
       Fn::GetAtt: [PostgresDB, Endpoint.Address]
     DB_PORT: 5432
@@ -41,6 +43,7 @@ provider:
             - sns:Receive
           Resource:
             - Ref: SuccessNotificationTopic
+            - Ref: EmailNotificationTopic
         - Effect: Allow
           Action:
             - sqs:SendMessage
@@ -122,6 +125,20 @@ resources:
       Properties:
         TopicName: success-notification-topic
         DisplayName: Success Notification Topic
+
+    EmailNotificationTopic:
+      Type: AWS::SNS::Topic
+      Properties:
+        TopicName: email-notification-topic
+        DisplayName: Email Notification Topic
+
+    EmailSubscription:
+      Type: AWS::SNS::Subscription
+      Properties:
+        Protocol: email
+        Endpoint: gabrielcouto26@gmail.com
+        TopicArn:
+          Ref: EmailNotificationTopic
 
     PostgresDB:
       Type: AWS::RDS::DBInstance
